[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytainer"
version = "0.0.1"
description = "A Python wrapper for Apptainer (Singularity) container management"
authors = [{ name = "Yohan Chatelain", email = "yohan.chatelain@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]
dependencies = ["pytest"]

[project.urls]
Home = "https://github.com/yohanchatelain/pytainer"


[tool.hatch.envs.default]
dependencies = ["setuptools>=40.6.0", "wheel"]
